# pencil-puzzle-bench

./: .gitignore  CLAUDE.md  Dockerfile.test  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: analyze_results.py  dataset_sweep.py  local_model_test.py  multi_model.py  quick_test.py
ppbench/: __init__.py  dataset.py  gym_env.py  puzzle.py  pzprjs.py  verifiers_env.py
ppbench/benchmarks/: __init__.py  harness.py  model_list.py  run_benchmark.py  strategy.py  utils.py
ppbench/benchmarks/strategies/: __init__.py  _helpers.py  basic_agentic.py  direct_ask.py
ppbench/bundled/: golden_30.jsonl  golden_300.jsonl
tests/: test_gym.py  test_puzzle.py
